// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Register /> should render component 1`] = `
<div
  className="register-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Sing Up
    </h2>
    <div
      className="form_element"
    >
      <input
        className=""
        name="name"
        onChange={[Function]}
        placeholder="Enter name"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="lastname"
        onChange={[Function]}
        placeholder="Enter Lastname"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="email"
        onChange={[Function]}
        placeholder="Enter Email"
        type="email"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="password"
        onChange={[Function]}
        placeholder="Enter Password"
        type="password"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Sign Up
    </button>
  </form>
  <div
    className="current_users"
  >
    <h3>
      Current users:
    </h3>
    <table>
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Lastname
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`<Register /> should render component with errors 1`] = `
<div
  className="register-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Sing Up
    </h2>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="name"
        onChange={[Function]}
        placeholder="Enter name"
        type="text"
        value=""
      />
    </div>
    <div
      className="error"
    >
      Test name
    </div>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="lastname"
        onChange={[Function]}
        placeholder="Enter Lastname"
        type="text"
        value=""
      />
    </div>
    <div
      className="error"
    >
      Test lastname
    </div>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="email"
        onChange={[Function]}
        placeholder="Enter Email"
        type="email"
        value=""
      />
    </div>
    <div
      className="error"
    >
      Test email
    </div>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="password"
        onChange={[Function]}
        placeholder="Enter Password"
        type="password"
        value=""
      />
    </div>
    <div
      className="error"
    >
      Test password
    </div>
    <button
      type="submit"
    >
      Sign Up
    </button>
  </form>
  <div
    className="current_users"
  >
    <h3>
      Current users:
    </h3>
    <table>
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Lastname
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;

exports[`<Register /> should render component with users 1`] = `
<div
  className="register-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Sing Up
    </h2>
    <div
      className="form_element"
    >
      <input
        className=""
        name="name"
        onChange={[Function]}
        placeholder="Enter name"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="lastname"
        onChange={[Function]}
        placeholder="Enter Lastname"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="email"
        onChange={[Function]}
        placeholder="Enter Email"
        type="email"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="password"
        onChange={[Function]}
        placeholder="Enter Password"
        type="password"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Sign Up
    </button>
  </form>
  <div
    className="current_users"
  >
    <h3>
      Current users:
    </h3>
    <table>
      <thead>
        <tr>
          <th>
            Name
          </th>
          <th>
            Lastname
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            name
          </td>
          <td>
            lastname
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
